# lz4-flex-rb

./: .gitignore  .rubocop.yml  CONTRIBUTING.md  Cargo.toml  Gemfile  README.md  Rakefile  dev.yml  lz4_flex-rb.gemspec  lz4_flex.gemspec  service.yml  shipit.cloudsmith.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  cla.yml  release.yml
.shopify-build/: lz4-flex-rb-publish-package.yml  lz4-flex-rb.yml
bench/: basic.rb
ext/lz4_flex_ext/: Cargo.toml  extconf.rb
ext/lz4_flex_ext/src/: block.rs  header.rs  helpers.rs  lib.rs
lib/: lz4_flex.rb
lib/lz4_flex/: rb.rb  version.rb
lib/lz4_flex/rb/: version.rb
scripts/: download_github_release_artifacts  release
sorbet/rbi/gems/: minitest@5.24.1.rbi  pry-sorbet@0.2.1.rbi  pry@0.14.2.rbi  rubocop-ast@1.31.3.rbi  rubocop@1.65.0.rbi  tapioca@0.15.1.rbi  yard@0.9.36.rbi
sorbet/shims/: rdoc.rbi
sorbet/tapioca/: require.rb
test/: block_test.rb  test_gem_install.sh  test_helper.rb
test/data/: random.expected  random.input
test/lz4_flex/: rb_test.rb
