[package]
name = "lz4_flex_ext"
version = "0.1.0"
edition = "2021"
authors = ["Ian Ker-Seymer <ian.kerseymer@shopify.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lz4_flex = { version = "0.11.3", default-features = true }
magnus = { version = "0.7.1", features = ["rb-sys"] }
rb-sys = { version = "0.9.101", features = ["stable-api-compiled-fallback"] }
