[package]
name = "lz4_flex_ext"
version = "0.1.0"
edition = "2021"
authors = ["Ian Ker-Seymer <ian.kerseymer@shopify.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lz4_flex = { version = "0.11.3", default-features = true }
magnus = { version = "0.7.1", features = ["rb-sys"] }
postcard = "1.0.10"
rb-sys = { version = "0.9.108", features = ["stable-api-compiled-fallback"] }
serde = { version = "1.0.210", features = ["derive"] }
static_assertions = "1.1.0"

[build-dependencies]
rb-sys-env = "*"
